--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@lucide/astro": "^0.514.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.15.4",
+    "astro": "^5.9.2",
     "flowbite": "^2.5.1",
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
